--- a/android/app/src/main/res/layout/launch_screen.xml
+++ b/android/app/src/main/res/layout/launch_screen.xml
@@ -2,5 +2,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <ImageView android:layout_width="match_parent" android:layout_height="fill_parent" android:src="@drawable/launch_screen" android:scaleType="centerInside" android:gravity="center" />
+    <ImageView android:layout_width="match_parent" android:layout_height="fill_parent" android:src="@drawable/launch_screen" android:scaleType="fitXY" android:gravity="center" />
 </LinearLayout>
